--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,14 @@ License: What license is it under?
 Imports: 
     config (>= 0.3),
     golem (>= 0.3.1),
-    shiny (>= 1.6.0)
+    shiny (>= 1.6.0),
+    attempt,
+    DT,
+    glue,
+    htmltools,
+    polished
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+URL: https://github.com/lefkiospaikousis/testPolished
+BugReports: https://github.com/lefkiospaikousis/testPolished/issues
